--- a/Path_to_AWS_Certified_Data_Analytics.ipynb
+++ b/Path_to_AWS_Certified_Data_Analytics.ipynb
@@ -78,7 +78,7 @@
     " <tr><td>Guaranteed ordering</td><td>Yes</td><td>No</td><td>Yes</td><td>Yes</td><td>No</td><td>Yes</td></tr>\n",
     " <tr><td>Delivery(deduping)</td><td>At least once</td><td>At least once</td><td>-</td><td>At least once/At most/Exactly once</td><td>At least once</td><td>Exactly once</td></tr>\n",
     " <tr><td>Data retention period</td><td>7 days</td><td>N/A</td><td>Configurable</td><td>Configurable</td><td>14 days</td><td>14 days</td></tr>\n",
-    " <tr><td>Availability</td><td>3 AZ</td><td>3 AZ</td><td>3 AZ</td><td>Configurable</td><td>3 AZ</td><td>3 AZ</td></tr>\n",
+    " <tr><td>Availability</td><td>3 AZ</td><td>3 AZ</td><td>Configurable Multi AZ</td><td>Configurable Multi AZ</td><td>3 AZ</td><td>3 AZ</td></tr>\n",
     " <tr><td>Scale/throughput</td><td>No limit / shards</td><td>No limit / Automatic</td><td>up to 30 / brokers</td><td>No limit / nodes</td><td>No limit / Automatic</td><td>300 TPS / queue</td></tr>\n",
     " <tr><td>Multiple consumers</td><td>Yes</td><td>N/A</td><td>Yes</td><td>Yes</td><td>No</td><td>No</td></tr>\n",
     " <tr><td>Row/Object Size</td><td>1 MB</td><td>Destination row / object size</td><td>Configurable</td><td>Configurable</td><td>256 KB</td><td>256 KB</td></tr>\n",
