ACS DynamoDB AWS ES S3

--- a/Path_to_AWS_Certified_Data_Analytics.ipynb
+++ b/Path_to_AWS_Certified_Data_Analytics.ipynb
@@ -76,7 +76,7 @@
     "<thead><tr class=\"tableizer-firstrow\"><th></th><th>Amazon Kinesis Data Stream</th><th>Amazon Kinesis Data Firehose</th><th>Amazon MSK</th><th>Apache Kafka(EC2)</th><th>Amazon SQS Standard</th><th>Amazon SQS FIFO</th></tr></thead><tbody>\n",
     " <tr><td>AWS Managed</td><td>Yes</td><td>Yes</td><td>Yes</td><td>No</td><td>Yes</td><td>Yes</td></tr>\n",
     " <tr><td>Guaranteed ordering</td><td>Yes</td><td>No</td><td>Yes</td><td>Yes</td><td>No</td><td>Yes</td></tr>\n",
-    " <tr><td>Delivery(deduping)</td><td>At least once</td><td>At least once</td><td>-</td><td>At least once/At most/Exactly once</td><td>At least once</td><td>Exactly once</td></tr>\n",
+    " <tr><td>Delivery(deduping)</td><td>At least once</td><td>At least once</td><td>At least once/At most/Exactly once</td><td>At least once/At most/Exactly once</td><td>At least once</td><td>Exactly once</td></tr>\n",
     " <tr><td>Data retention period</td><td>7 days</td><td>N/A</td><td>Configurable</td><td>Configurable</td><td>14 days</td><td>14 days</td></tr>\n",
     " <tr><td>Availability</td><td>3 AZ</td><td>3 AZ</td><td>Configurable Multi AZ</td><td>Configurable Multi AZ</td><td>3 AZ</td><td>3 AZ</td></tr>\n",
     " <tr><td>Scale/throughput</td><td>No limit / shards</td><td>No limit / Automatic</td><td>up to 30 / brokers</td><td>No limit / nodes</td><td>No limit / Automatic</td><td>300 TPS / queue</td></tr>\n",
@@ -92,6 +92,60 @@
    "source": [
     "Amazon MSK: up to 30 brokers, but, you can request a limit increase in the AWS Support Center."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style type=\"text/css\">\n",
+    "\ttable.tableizer-table {\n",
+    "\t\tfont-size: 12px;\n",
+    "\t\tborder: 1px solid #CCC; \n",
+    "\t\tfont-family: Arial, Helvetica, sans-serif;\n",
+    "\t} \n",
+    "\t.tableizer-table td {\n",
+    "\t\tpadding: 4px;\n",
+    "\t\tmargin: 3px;\n",
+    "\t\tborder: 1px solid #CCC;\n",
+    "\t}\n",
+    "\t.tableizer-table th {\n",
+    "\t\tbackground-color: #104E8B; \n",
+    "\t\tcolor: #FFF;\n",
+    "\t\tfont-weight: bold;\n",
+    "\t}\n",
+    "</style>\n",
+    "<table class=\"tableizer-table\">\n",
+    "<thead><tr class=\"tableizer-firstrow\"><th></th><th>Amazon CloudSearch</th><th>Amazon DynamoDB + DAX</th><th>Amazon ElasticSearch</th><th>Amazon S3</th></tr></thead><tbody>\n",
+    " <tr><td>Use cases</td><td>-</td><td>Key-Value, document store</td><td>Log analysis</td><td>Object Store</td></tr>\n",
+    " <tr><td>Performance</td><td>-</td><td>Ultra high request rate, low latency</td><td>Medium request rate, low latency</td><td>High throughput</td></tr>\n",
+    " <tr><td>Shape</td><td>-</td><td>Key-Value / Document</td><td>Documents</td><td>Objects</td></tr>\n",
+    " <tr><td>Size</td><td>-</td><td>TB - PB</td><td>&nbsp;</td><td>No limits</td></tr>\n",
+    " <tr><td>Cost/GB</td><td>-</td><td>¢¢ - $$</td><td>¢¢</td><td>&nbsp;</td></tr>\n",
+    " <tr><td>Availability</td><td>-</td><td>3 AZ</td><td>1-2 AZ</td><td>3 AZ</td></tr>\n",
+    " <tr><td>VPC Support</td><td>-</td><td>VPC Endpoint</td><td>Outside or Inside VPC</td><td>VPC endpoint</td></tr>\n",
+    "</tbody></table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
